--- a/static/main.css
+++ b/static/main.css
@@ -41,6 +41,15 @@ table.schichtplan td.person_name {
 	border-right:#000000 solid 2px;
 }
 
+.names {
+	width: 100%;
+	height: 10em;
+}
+
+.shifts {
+	line-height: 2em;
+}
+
 .wochenende {
 	background-color:#dddddd;
 	font-weight:bold;
